<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Whooz</string>
    <string name="action_settings">Settings</string>
    <string name="name_text">Name Your Event:</string>
    <string name="name_hint">Title</string>
    <string name="Add">Address</string>
    <string name="create_action_bar">Create Event</string>
    <string name="get_started">Address</string>
    <string name="app_id">1477492735832776</string>
    <string name="action_people_default">Select friends</string>
    <string name="action_people">With whom?</string>
	<string name="title_activity_profile">Whooz Home</string>
    <string name="no_location_error">Could not obtain your current location</string>
    <string name="error_dialog_title">Error</string>
	<string name="error_dialog_button_text">OK</string>
	<string name="title_activity_picker">PickerActivity</string>
	<string name="places_autocomplete_str">Enter Place Here</string>
	<string name="title_activity_invite_friends">Invite your friends</string>
	<string name="info_text">Want to tell more?</string>
	<string name="info_hint">Enter description here</string>
	<string name="location_text">Choose a place:</string>
	<string name="location_hint">Type a location</string>
	<string name="radio_group_text">Is your event:</string>
	<string name="radio_public">Public</string>
	<string name="radio_private">Private</string>
	<string name="radio_or">OR</string>
	<string name="photo_selector_text">choose a photo</string>
	<string name="create_text">CREATE!</string>
	<string name="delete_text">DELETE EVENT</string>
	<string name="check_in">Check In</string>
	<string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>
    <string-array name="eveTypes">
        <item>Party</item>
        <item>Convention</item>
        <item>Other</item>
    </string-array>
    <string name="toast_crash">Reporting crash</string>

    <string name="title_activity_custom_gallery">Select Event photos</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="time">Choose Time &amp; Date: </string>
    <string name="title_activity_date_pick">DatePick</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="navDrawerTitles">
        <item>Whooz</item>
        <item>Look around</item>
        <item>What\'s next</item>
        <item>Create Event</item>
    </string-array>
    
    

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
