<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backrepeat" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/photoSelector"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/photo_selector_text"
            android:scaleType="center"
            android:src="@drawable/photo_default" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/eveNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text"
                android:textColor="#b71818"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/eveNameText"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/eveNameText"
                android:ems="18"
                android:hint="@string/name_hint"
                android:inputType="text" >
            </EditText>
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#db8a8a" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:id="@+id/placeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/placesAutoCompleteBox"
                android:text="@string/location_text"
                android:textColor="#b71818"
                android:textSize="15sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@id/placesAutoCompleteBox"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_toRightOf="@id/placeText"
                android:dropDownWidth="match_parent"
                android:ems="18"
                android:hint="@string/location_hint" />

            <Button
                android:id="@+id/curLoc"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@id/placesAutoCompleteBox"
                android:layout_toRightOf="@id/placesAutoCompleteBox"
                android:background="@drawable/facebook_places_logo" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#db8a8a" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/RadioGroupText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/radio_group_text"
                android:textColor="#b71818"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/eveType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/pubRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:button="@drawable/radio_style"
                    android:text="@string/radio_public"
                    android:textColor="#b71818"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/RadioGroupText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/radio_or"
                    android:textColor="#b71818"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/privRadio"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:button="@drawable/radio_style"
                    android:text="@string/radio_private"
                    android:textColor="#b71818"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#db8a8a" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:text="@string/time"
                android:textColor="#b71818"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pickDate"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/calendarbtt" />

            <TextView
                android:id="@+id/dateDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:textColor="#b71818" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="3dp"
            android:background="#db8a8a" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_text"
                android:textColor="#b71818"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/info"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/info_hint"
                android:inputType="text" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#db8a8a" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/sendRequestButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:background="@drawable/facebook_invite" />

            <Button
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:background="@drawable/red_button_rect"
                android:text="@string/create_text"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/delete"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/red_button_rect"
            android:text="@string/delete_text"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

</ScrollView>